--- a/styles/main.css
+++ b/styles/main.css
@@ -1,190 +1,178 @@
 /* google font import */
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
 
 /* render element */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Overpass', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Overpass", sans-serif;
 }
 
 /* variables */
 :root {
-    /* ### Primary */
-    --Orange: hsl(25, 97%, 53%);
-    /* ### Neutral */
-    --White: hsl(0, 0%, 100%);
-    --Light-Grey: hsl(217, 12%, 63%);
-    --Medium-Grey: hsl(216, 12%, 54%);
-    --Dark-Blue: hsl(213, 19%, 18%);
-    --Very-Dark-Blue: hsl(216, 12%, 8%);
+  /* ### Primary */
+  --Orange: hsl(25, 97%, 53%);
+  /* ### Neutral */
+  --White: hsl(0, 0%, 100%);
+  --Light-Grey: hsl(217, 12%, 63%);
+  --Medium-Grey: hsl(216, 12%, 54%);
+  --Dark-Blue: hsl(213, 19%, 18%);
+  --Very-Dark-Blue: hsl(216, 12%, 8%);
 }
 
 /* style start */
 body {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--Very-Dark-Blue)
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--Very-Dark-Blue);
 }
 
 .card {
-    margin-bottom: 2rem;
-    padding: 2rem;
-    width: 90%;
-    max-width: 425px;
-    background-color: var(--Dark-Blue);
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 0 5px var(--Dark-Blue);
+  margin-bottom: 2rem;
+  padding: 2rem;
+  width: 90%;
+  max-width: 425px;
+  background-color: var(--Dark-Blue);
+  border: none;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px var(--Dark-Blue);
 }
 
 .card .rate--inter {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .card .card__stars {
-    padding: 1rem 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  padding: 1rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .card__stars .star {
-    width: 2.5rem;
-    height: 2.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--Very-Dark-Blue);
-    border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--Very-Dark-Blue);
+  border-radius: 50%;
 }
 
-@media (min-width: 472px){
-    .card__stars .star {
-        width: 3.5rem;
-        height: 3.5rem;
-    }
+@media (min-width: 472px) {
+  .card__stars .star {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
 }
 
 .card__rate .star img {
-    width: auto;
-    height: auto;
+  width: auto;
+  height: auto;
 }
 
 .card .card__q {
-    margin-top: 1rem;
-    color: var(--White);
+  margin-top: 1rem;
+  color: var(--White);
 }
 
 .card .card__descripe {
-    color: var(--Light-Grey);
-    line-height: 1.6;
+  color: var(--Light-Grey);
+  line-height: 1.6;
 }
 
 .card .card--rate {
-    padding: 1rem 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  padding: 1rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card--rate .rate {
-    width: 2.5rem;
-    height: 2.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--Light-Grey);
-    background-color: var(--Very-Dark-Blue);
-    border-radius: 50%;
-    transition: .3s;
-    cursor: pointer;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--Light-Grey);
+  background-color: var(--Very-Dark-Blue);
+  border-radius: 50%;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
-@media (min-width: 472px){
-    .card--rate .rate {
-        width: 3.5rem;
-        height: 3.5rem;
-    }
+@media (min-width: 472px) {
+  .card--rate .rate {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
 }
 
 .card--rate .rate:hover {
-    background-color: var(--Light-Grey);
-    color: var(--White);
+  background-color: var(--Light-Grey);
+  color: var(--White);
 }
 
 .active {
-    background-color: var(--Orange) !important;
-    color: var(--White) !important;
+  background-color: var(--Orange) !important;
+  color: var(--White) !important;
 }
 
 .card .card--submit {
-    margin-top: 1rem;
-    padding: 1rem 0;
-    background-color: var(--Orange);
-    color: var(--White);
-    border: none;
-    border-radius: 2rem;
-    transition: .3s;
-    cursor: pointer;
+  margin-top: 1rem;
+  padding: 1rem 0;
+  background-color: var(--Orange);
+  color: var(--White);
+  border: none;
+  border-radius: 2rem;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .card .card--submit:hover {
-    background-color: var(--White);
-    color: var(--Orange);
+  background-color: var(--White);
+  color: var(--Orange);
 }
 
 /* rate msg */
 .card .rate--msg {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: none;
 }
 
 .rate--msg .img-container img {
-    width: auto;
-    height: auto;
+  width: auto;
+  height: auto;
 }
 
 .rate--msg .msg__select {
-    margin: 1rem 0;
-    padding: 1rem 1.5rem;
-    background-color: var(--Very-Dark-Blue);
-    color: var(--Orange);
-    border: none;
-    border-radius: 2rem;
+  margin: 1rem 0;
+  padding: 1rem 1.5rem;
+  background-color: var(--Very-Dark-Blue);
+  color: var(--Orange);
+  border: none;
+  border-radius: 2rem;
 }
 
 .rate--msg .msg__title {
-    color: var(--White);
+  color: var(--White);
 }
 
 .rate--msg .msg__descripe {
-    margin: 1rem 0;
-    color: var(--Medium-Grey);
-    text-align: center;
-    line-height: 1.6;
-}
-
-/* attribution */
-.attribution {
-    margin-top: 2rem;
-    color: var(--White);
-    font-weight: bold;
-    text-align: center;
-}
-
-.attribution a {
-    color: var(--Orange);
+  margin: 1rem 0;
+  color: var(--Medium-Grey);
+  text-align: center;
+  line-height: 1.6;
 }
